fixtures/frontend/milestone-2/valid/class-declarations/main.aivi
class Eq A = {
    (==) : A -> A -> Bool
}

class Display A = {
    display : A -> Text
}

type Int -> Int -> Bool
func equivalent = left right =>
    left == right and left != 0
