fixtures/frontend/milestone-2/invalid/instance-member-operator-mismatch/main.aivi
class Ready A = {
    ready : A -> Bool
}

type Blob =
  | Blob Bytes

instance Ready Blob = {
    ready blob = blob and True
}
